# pybricks-connect

./: .dockerignore  .gitattributes  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  start.ps1  start.sh  test_ping.py
.github/: dependabot.yml
docs/: Hub Controller.md
hub/: hub_actions.py  hub_commands.py  hub_controller.py  hub_devices.py  hub_tools.py  test_hub_tools.py
server/: app.py  bleak_interface.py  controller.py  instruct_config.py  models.py  server.py  test_bleak_interface.py  test_controller.py  tools.py
server_data/: hub_commands.py  instructs.example.yml  title.txt
test/: mock_classes.py
