[project]
name = "pybricks-connect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.1",
    "azure-identity>=1.25.3",
    "bleak>=3.0.2",
    "pybricks>=4.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pybricksdev>=2.3.2",
]
